--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5 px-5 pl-lg-0 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100 rounded-circle shadow-sm" src="./fotos/perfil.jpg" alt="">
+                    <img class="img-fluid w-100 rounded-circle shadow-sm" src="./fotos/Perfil - Dirceu.jpeg" alt="">
                 </div>
                 <div class="col-lg-7 text-center text-lg-left">
                     <h3 class="text-white font-weight-normal mb-3">I'm</h3>
@@ -99,7 +99,7 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
-                    <img class="img-fluid rounded w-100" src="./fotos/perfil.jpg" alt="">
+                    <img class="img-fluid rounded w-100" src="./fotos/Perfil - Dirceu.jpeg" alt="">
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">FullStack Developer</h3>
