atualizacao do portfolio

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
         <div class="collapse navbar-collapse px-lg-3" id="navbarCollapse">
             <div class="navbar-nav m-auto py-0">
                 <a href="#home" class="nav-item nav-link active">Home</a>
-                <a href="#about" class="nav-item nav-link">About</a>
-                <a href="#qualification" class="nav-item nav-link">Quality</a>
-                <a href="#skill" class="nav-item nav-link">Skill</a>
-                <a href="#service" class="nav-item nav-link">Service</a>
-                <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
-                <a href="#contact" class="nav-item nav-link">Contact</a>
+                <a href="#about" class="nav-item nav-link">Sobre mim</a>
+                <a href="#qualification" class="nav-item nav-link">Experiência</a>
+                <a href="#skill" class="nav-item nav-link">Habilidades</a>
+                <a href="#service" class="nav-item nav-link">Serviços</a>
+                <a href="#portfolio" class="nav-item nav-link">Portfólio</a>
+                <a href="#contact" class="nav-item nav-link">Contato</a>
             </div>
-            <a href="" class="btn btn-outline-primary d-none d-lg-block">Me contrate</a>
+            <a href="https://web.whatsapp.com/send?phone=5585997942857" target="_blank" class="btn btn-outline-primary d-none d-lg-block">Contato</a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -111,12 +111,12 @@
                         <div class="col-sm-6 py-2"><h6>Experiencia: <span class="text-secondary">2 meses</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Telefone: <span class="text-secondary">+55 85 99794.2857</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">dirceusljr@gmail.com</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Endereço: <span class="text-secondary">Rua Marechal Deodoro 55 apt 207-B, Fortaleza-CE.</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Local: <span class="text-secondary">Fortaleza-CE.</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Linkedin: <span class="text-secondary"><a href="https://www.linkedin.com/in/dirceusljr/" target="_blank">linkedin.com/in/dirceusljr</a></span></h6></div> 
                         <div class="col-sm-6 py-2"><h6>GitHub: <span class="text-secondary"><a href="https://github.com/Dirceusljr" target="_blank">github.com/dirceusljr</a></span></h6></div>
                     </div>
-                    <a href="mailto:dirceusljr@gmail.com?subject=Contratação&body=Caro Dirceu, estou entrando em contato para realizar uma proposta." class="btn btn-outline-primary mr-4">Hire Me</a>
-                    <a href="https://web.whatsapp.com/send?phone=5585997942857" target="_blank" class="btn btn-outline-primary">Learn More</a>
+                    <a href="mailto:dirceusljr@gmail.com?subject=Contratação&body=Caro Dirceu, estou entrando em contato para realizar uma proposta." class="btn btn-outline-primary mr-4">Contato email</a>
+                    <a href="https://web.whatsapp.com/send?phone=5585997942857" target="_blank" class="btn btn-outline-primary">Contato WhatsApp</a>
                 </div>
             </div>
         </div>
@@ -514,7 +514,7 @@
     <!-- Portfolio End -->
 
     <!-- Contact Start -->
-    <div class="container-fluid py-5" id="contact">
+    <div class="container-fluid py-5 esconder" id="contact">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
                 <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Contato</h1>
